# Japanese_Character_Name_Dictionary

./: .gitignore  README.md  agents.md  agents_read_me.md  contributing.md  log_stats.py  output.txt  plan.md  sonar-project.properties
yomitan-dict-builder/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  primary_bug.md
yomitan-dict-builder/config/: all_names_snapshot.toml  anilist_kaggle_snapshot.toml  available_names_snapshot.toml  jmnedict_snapshot.toml  ultimate_snapshot.toml  vndb_snapshot.toml  web_ndl_snapshot.toml  wikidata_snapshot.toml  wikipedia_snapshot.toml
yomitan-dict-builder/scripts/: build_all_names_yomitan.sh  download_offline_sources.sh  export_available_names_yomitan.sh  refresh_anilist_media_index.py  test_anilist_media_autocomplete.js  test_refresh_anilist_media_index.py
yomitan-dict-builder/src/: .!5305!main.rs  anilist_client.rs  anilist_name_test_data.rs  content_builder.rs  dict_builder.rs  disk_cache.rs  frequency_dict_builder.rs  image_cache.rs  image_handler.rs  jiten_client.rs  kana.rs  lib.rs  main.rs  media_cache.rs  models.rs  name_parser.rs  snapshot_yomitan.rs  vndb_client.rs
yomitan-dict-builder/static/: anilist-media-autocomplete.js  app.js  index.html  nav.css  site.webmanifest  style.css
yomitan-dict-builder/tests/: add_honorifics_skill.rs  all_names_snapshot.rs  anilist_kaggle_snapshot.rs  integration_tests.rs  jmnedict_snapshot.rs  offline_character_fixture_suite.rs  ultimate_snapshot.rs  vndb_snapshot.rs  web_ndl_snapshot.rs  wikidata_snapshot.rs  wikipedia_snapshot.rs
(+61 files in other folders)
